PS-2017.2 <megas@megas-PC Update nicegroup.xml

--- a/templates/nicegroup.xml
+++ b/templates/nicegroup.xml
@@ -1,5 +1,5 @@
 <templateSet group="nicegroup">
-  <template name="tr" value="&lt;?= __('$END$'); ?&gt;" toReformat="false" toShortenFQNames="true">
+  <template name="tr" value="&lt;?= __('$END$'); ?&gt;" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="OTHER" value="true" />
     </context>
