--- a/templates/nicegroup.xml
+++ b/templates/nicegroup.xml
@@ -4,4 +4,9 @@
       <option name="OTHER" value="true" />
     </context>
   </template>
+  <template name="de" value="debug($END$); die;" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="OTHER" value="true" />
+    </context>
+  </template>
 </templateSet>
